reto modulo2 1era opcion con switch

--- a/descuentos.html
+++ b/descuentos.html
@@ -17,8 +17,8 @@
         <label for="price">Escribe el precio de tu producto</label>
         <input type="number" id="price" />
         <br />
-        <label for="discount">Escribe el descuento de tu producto</label>
-        <input type="number" id="discount" />
+        <label for="coupon">Escribe el cupon de descuento de tu producto</label>
+        <input type="text" id="coupon" />
         <button type="button" onClick="onClickButtonPriceDiscount()">
           Calcular el precio con descuento
         </button>
