corregir no saca el promedio con el html

--- a/promedio.html
+++ b/promedio.html
@@ -10,6 +10,17 @@
     <header>
       <h1>Promedios</h1>
     </header>
+    <section>
+      <h2>Sacando promedio</h2>
+      <form>
+        <label for="lista">Introduzca una lista</label>
+        <input id="lista" />
+        <button type="button" onclick="calcularPromedio()">
+          Calcular Promedio
+        </button>
+        <p id="resultado"></p>
+      </form>
+    </section>
     <script src="promedio.js"></script>
   </body>
 </html>
