Completo html con promedio ponderado

--- a/ponderado.html
+++ b/ponderado.html
@@ -53,10 +53,11 @@
           <br />
           <p id="lista">[]</p>
           <br />
-          <button type="button" onclick="calcularPromedio()">
+          <button type="button" onclick="calcularPromedioPonderadoHTML()">
             Calcular el promedio ponderado
           </button>
         </form>
+        <p id="resultadoP"></p>
       </section>
     </main>
     <script src="ponderado.js"></script>
