--- a/salarios.html
+++ b/salarios.html
@@ -13,6 +13,17 @@
     <main>
       <section>
         <h2>Salarios de colombia</h2>
+        <label>Ver el promedio de los salarios de Colombia </label>
+        <button type="button" onclick="calcularSalariosColHTML()">ver</button>
+        <br />
+        <p id="promedioSalarios"></p>
+        <label
+          >Ver el promedio de los Top 10 salarios más altos de Colombia
+        </label>
+        <button type="button" onclick="calcularTop10SalariosColHTML()">
+          ver
+        </button>
+        <p id="promedioTop10Salarios"></p>
       </section>
     </main>
     <script src="./salarios.js"></script>
