--- a/figuras.html
+++ b/figuras.html
@@ -11,22 +11,25 @@
       <h1>Figuras geometricas</h1>
       <p>1er taller</p>
     </header>
-    <section>
-      <h2>Calcula el area y perimetro del cuadrado</h2>
-      <form>
-        <label for="inputCuadrado"> Escribe el lado del cuadrado:</label>
-        <input type="number" id="inputCuadrado" />
-        <!-- recarga la pagina porque los botones por estar dentro de un formulario entiende de que debemos enviar e ir a otra pagina -->
-        <!-- Los trata como botones de tipo submit -->
-        <button type="button" onclick="calcularPerimetroCuadrado()">
-          Calcular perimetro
-        </button>
-        <button type="button" onclick="calcularAreaCuadrado()">
-          Calcular area
-        </button>
-      </form>
-    </section>
-    <hr />
+    <main>
+      <section>
+        <h2>Calcula el area y perimetro del cuadrado</h2>
+        <form>
+          <label for="inputCuadrado"> Escribe el lado del cuadrado:</label>
+          <input type="number" id="inputCuadrado" />
+          <!-- recarga la pagina porque los botones por estar dentro de un formulario entiende de que debemos enviar e ir a otra pagina -->
+          <!-- Los trata como botones de tipo submit -->
+          <button type="button" onclick="calcularPerimetroCuadrado()">
+            Calcular perimetro
+          </button>
+          <button type="button" onclick="calcularAreaCuadrado()">
+            Calcular area
+          </button>
+        </form>
+      </section>
+      <hr />
+    </main>
+
     <section>
       <h2>Calcula el area y perimetro del triangulo</h2>
       <form>
