--- a/figuras.html
+++ b/figuras.html
@@ -78,6 +78,8 @@
           Perímetro
         </button>
         <button type="button" onclick="manager.trianguloArea()">Área</button>
+        <button type="button" onclick="manager.trianguloAreaHeron()">Área sin Altura (f. de Herón) </button>
+
       </form>
       <p id="resultadoTriangulo"></p>
       <button type="button" onclick="manager.trianguloClean()">Limpiar</button>
@@ -117,7 +119,7 @@
             id="inputAlturaRectangulo"
             placeholder="Introduzca la medida"
             />
-          <h4>Calcular:</h4>
+          <h4>¿Qué quieres calcular?</h4>
           <button type="button" onclick="manager.rectanguloPerimetro()">
             Perímetro
           </button>
