--- a/figuras.html
+++ b/figuras.html
@@ -131,6 +131,9 @@
       </section>
       <hr />
     </main>
+    <footer>
+      <p> &copy; Ana Carolina - 2022</p>
+  </footer>
     <script src="./figuras.js"></script>
   </body>
 </html>
