--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Home | Practicas JS</title>
 </head>
 <body>
     <header>
         <h1>Talleres del Curso Práctico con JS</h1>
-        <p>Ana Carolina</p>
-
     </header>
     <section>
         <nav>
@@ -27,7 +26,9 @@
         </nav>
         </nav>            
     </section>
-
+    <footer>
+        <p> &copy; Ana Carolina - 2022</p>
+    </footer>
     
 </body>
 </html>
