--- a/media.html
+++ b/media.html
@@ -34,6 +34,9 @@
         </form>
       </section>
     </main>
+    <footer>
+      <p> &copy; Ana Carolina - 2022</p>
+  </footer>
     <script src="./media.js"></script>
   </body>
 </html>
